# BAP-Rover-Deployment-Software-System

./: .ccsproject  .cproject  .project  README.md  main.c
.launches/: rover deployment software system.launch
Debug/: ccsObjs.opt  main.d  makefile  rover deployment software system.map  rover deployment software system.out  rover deployment software system_linkInfo.xml  sources.mk  subdir_rules.mk  subdir_vars.mk
Debug/src/: main.d  subdir_rules.mk  subdir_vars.mk
include/communication/: landerComm.h  landerCommInterrupts.h  landerCommProtocol.h  lander_communication.h  lander_communication_protocol.h  protocol.h  uart_communication.h
include/lander_communication_lib/: lander_communication.h  lander_communication_protocol.h  payload_messages.h  uart_communication.h
include/systemHealth/: actuatorControl.h
include/system_health_lib/: ECCS.h  NEA_readout.h  bus_current_readout.h  heat_resistor_control.h  main_system_init.h  supercap_readout.h  temp_sensors.h  umbilical_cord.h
include/transit_modes_lib/: deployment_mode.h  general_startup.h  launch_mode.h  pre_deployment_mode.h  transit_mode.h
src/: main.cpp
src/Diederik/: Heat_resistor_control.cpp  Supercapreadout.cpp  Temp_sensors.cpp
src/communication/: LanderCommProtocol.cpp  comProtocols.cpp  landerComm.cpp  landerCommInterrupts.cpp  lander_communication.cpp  lander_communication_protocol.cpp  protocol.c  uart_communication.cpp
src/deployment/: actuatorControl.cpp  (+1 more)
test/TestingRepositoryBEP/: CMakeLists.txt  main.cpp
test/TestingRepositoryBEP/Google_tests/: CMakeLists.txt  all_tests.cpp  convert_array_to_message_tests.cpp  convert_message_to_array_tests.cpp  send_message_struct_tests.cpp  slip_decoding_tests.cpp  slip_encoding_tests.cpp  supercap_readout_tests.cpp  temp_sensors_test.cpp
test/TestingRepositoryBEP/Google_tests/lib/: ._README.md
test/TestingRepositoryBEP/Google_tests/lib/googletest/include/gtest/: ._gtest.h
test/TestingRepositoryBEP/electronics_components_control_system_lib/: CMakeLists.txt  supercap_readout.cpp  supercap_readout.h  temp_sensors.cpp  temp_sensors.h
test/TestingRepositoryBEP/lander_communication_lib/: CMakeLists.txt  lander_communication.cpp  lander_communication.h  lander_communication_protocol.cpp  lander_communication_protocol.h  uart_communication.cpp  uart_communication.h
(+79 files in other folders)
